2/25/2006 Bob Rossi <bob@brasko.net>

	* src/highlight_groups.c: Fixed comments, and spelling errors.

2/25/2006 Bob Rossi <bob@brasko.net>

	* include/highlight_groups.h (hl_group_kind): Remove HLG_UI_LABEL and
	HLG_FILEDLG_FILENUM enumeration values.
	* src/highlight_groups.c (default_groups_for_curses): Remove
	HLG_UI_LABEL and HLG_FILEDLG_FILENUM initialization.
	(default_groups_for_background_dark): Ditto.
	(hl_group_names): Ditto. Fix reversed strings.
	(attr_names): Add normal, blink and dim attributes. Remove italic 
	attribute.
	(setup_group): Add curses specific code.
	* src/filedlg.c (print_in_middle): Remove color parameter.
	(filedlg_display): No longer color the file dialog top label.
	Remove unreachable code.
	* include/helptext.h: Autogenerated.

2/24/2006 Bob Rossi <bob@brasko.net>

	* src/logo.c (usage): Modify logo usage again.

2/24/2006 Bob Rossi <bob@brasko.net>

	* src/interface.c: Used indent on file.

2/24/2006 Bob Rossi <bob@brasko.net>

	* src/logo.c (usage): Modify logo usage.

2/23/2006 Bob Rossi <bob@brasko.net>

	* include/cgdb.h (debug,CGDB_COLOR_*): Removed.
	* include/interface.h (if_init): Modified comment.
	* src/Makefile.am (cgdb_SOURCES): Added highlight_groups.c.
	* src/Makefile.in: Autogenerated.
	* src/cgdb.c (main): Add return value case.
	* src/cgdbrc.c (#include "highlight_groups.h"): Added.
	(command_parse_highlight): Ditto.
	(COMMANDS): Ditto.
	* src/command_lexer.l (","): Added.
	* src/filedlg.c (#include "highlight_groups.h"): Added.
	Changed use of COLOR_PAIR to hl_groups_get_attr.
	* src/highlight.c: Ditto.
	* src/interface.c: Ditto.
	(init_curses): Add use_default_colors when available.
	* src/logo.c: Ditto.
	* src/sources.c: Ditto.
	* src/tester.c: Added defines it's still using.
	* src/highlight_groups.c: Added new file.
	* src/highlight_groups.h: Added new file.

2/18/2006 Bob Rossi <bob@brasko.net>

	* src/cgdbrc.c (command_parse_file): Fix valgrind found error.

2/18/2006 Bob Rossi <bob@brasko.net>
